data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1540.wast
;; 1. **Test Description**: Test an `if-else` block within a loop that uses nested `br_if` instructions. Ensure that the `then` part of the `if` contains `br_if` to break the loop based on a nested condition within a series of complex instructions.    **Constraint Checked**: Validates the correct propagation of labels and stack state management within nested blocks.    **Relation to Infinite Loops**: If the `br_if` condition fails to break the loop due to improper stack or label management, the loop will run indefinitely.

(assert_invalid
  (module
    (func $label-propagation-in-loop
      (loop $top (result i32)
        (i32.const 1) 
        (if (result i32)
          (then
            (i32.const 2)
            (i32.const 0)
            (br_if 1)
            (i32.const 0)
          )
          (else
            (i32.const 3)
          )
        )
      )
    )
  )
  "type mismatch"
)